# microlens-utils

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  conf.py  example_compare_packages.txt  examples.md  examples_usage.ipynb  guide.md  index.md
microlens_utils/: __init__.py  cli.py  converters.py  models.py  quantities.py
microlens_utils/adapters/: __init__.py  bagle_adapter.py  base.py  gulls_adapter.py  mm_adapter.py  vbm_adapter.py
microlens_utils/frames/: __init__.py  projections.py  rotations.py
microlens_utils/frames/bagle/: __init__.py  helio_geo.py  vectors.py
scripts/: bump_version.py  lint.sh
tests/: test_bagle_adapter.py  test_converters.py  test_models.py  test_projections.py  test_rotations.py
