[build-system]
requires = ["hatchling>=1.10,<3"]
build-backend = "hatchling.build"

[project]
name = "microlens-utils"
version = "0.2.0"
description = "Utility functions and tools for microlensing analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Amber Malpas", email = "malpas.1@osu.edu" }
]

dependencies = [
    "astropy",
    "numpy",
    "astroquery",
    "pandas",
]

[project.optional-dependencies]
adapters = [
    "VBMicrolensing",
    "MulensModel",
    "BAGLE",
    "joblib",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]
docs = [
    "sphinx>=7.2",
    "myst-parser>=2.0",
    "myst-nb>=1.1",
    "sphinx-rtd-theme>=1.3",
]

[project.scripts]
microlens-utils = "microlens_utils.cli:main"

[project.urls]
Homepage = "https://example.org/microlens-utils"
Repository = "https://example.org/microlens-utils.git"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
src = ["microlens_utils", "tests"]
line-length = 100
target-version = "py310"
extend-exclude = [
    "docs/**/*.ipynb",
    "docs/_build",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
